@@ -834,6 +834,7 @@ Wojtek Walczak
 Charles Waldman
 Richard Walker
 Larry Wall
+Kevin Walzer
 Greg Ward
 Barry Warsaw
 Steve Waterbury
